--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -1,28 +1,4 @@
-:root {
-    --color-primary: #d73953;
-    --color-black: #090909;
-    --color-white: #ffffff;
-    --color-light-grey: #f3f3f3;
-    --color-dark-grey: #353535;
-    --text-color: var(--color-black);
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-size-small: 1.2rem;
-    --font-size-medium: 1.6rem;
-    --font-size-large: 1.8rem;
-    --font-size-x-large: 2.3rem;
-    --font-size-xx-large: 4.8rem;
-    --font-weight-regular: 400;
-    --font-weight-bold: 700;
-    --line-height-small: 1.2;
-    --line-height-base: 1.5;
-    --line-height-big: 1.8;
-    --section-header-align: center;
-    --section-tagline-transform: uppercase;
-    --section-title-margin: 0;
-    --section-title-color: var(--color-black);
-}
-
+/* Styling the anchor */
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
@@ -36,22 +12,29 @@ body {
     line-height: var(--line-height-base);
 }
 
-a[href]:not(.visually-hidden) {
+a:link {
     color: var(--text-color);
     text-decoration: none;
 }
 
-a[href]:visited:not(.visually-hidden) {
-    color: var(--text-color);
-    text-decoration: italic;
+a:visited {
+    font-style: italic;
 }
 
-a[href]:hover:not(.visually-hidden) {
+a:hover {
     text-decoration: underline;
 }
 
-a[href]:active:not(.visually-hidden) {
+a:active {
     background-color: var(--color-light-grey);
+}
+
+.visually-hidden {
+    display : none;
+}
+
+.card-category {
+    color: var(--color-primary);
 }
 
 .section-header {
@@ -78,6 +61,27 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: var(--font-weight-bold);
 }
 
-.visually-hidden {
-    display: none;
+:root {
+    --color-primary: #D73953;
+    --color-black: #090909;
+    --color-white: #ffffff;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
+    --text-color: var(--color-black);
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-size-small: 1.2rem;
+    --font-size-medium: 1.6rem;
+    --font-size-large: 1.8rem;
+    --font-size-x-large: 2.3rem;
+    --font-size-xx-large: 4.8rem;
+    --font-weight-regular: 400;
+    --font-weight-bold: 700;
+    --line-height-small: 1.2;
+    --line-height-base: 1.5;
+    --line-height-big: 1.8;
+    --section-header-align: center;
+    --section-tagline-transform: uppercase;
+    --section-title-margin: 0;
+    --section-title-color: var(--color-black);
 }
